<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HugeData</string>
    <string name="title_section3">Unlock</string>
    <string name="title_section2">Condition</string>
    <string name="title_section1">Configure</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="startTcpClient">Start TCP Client</string>
    <string name="stopTcpClient">Stop TCP Client</string>
    <string name="startTcpServer">Start TCP Server</string>
    <string name="stopTcpServer">Stop TCP Server</string>
    <string name="unlockscreen">This is the screen used for unlocking the screen.</string>
    <string name="tips">Tips</string>
    <string name="tipscontent">This  app functions as the maintenance helper for android automation test. Be sure that every phone has installed this app.</string>
    <string name="tips1">1. Unlock and wake up the screen</string>
    <string name="tips2">2. Create the folder: /sdcard/hugedata</string>
    <string name="tips3">3. Store the manufacturer and type of this phone in /sdcard/hugedata/deviceinfo</string>
    <string name="tips4">4. Monitor the phone\'s real-time health</string>
    <string name="welcome">Welcome</string>

</resources>