<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" 
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/unlockscreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/unlockscreen"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tips"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tipscontent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipscontent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tips1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tips2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tips3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips3"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tips4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips4"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>